# xsensor

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: bundle.yml
assets/: tailwind.css
assets/styling/: main.css
src/: ble_constants.rs  context.rs  main.rs
src/api/: ble.rs  ble_service.rs  mod.rs
src/components/: empty_state.rs  loading_overlay.rs  mod.rs
src/views/: connection.rs  mod.rs  navbar.rs  parameters.rs  status.rs  titlebar.rs
