[package]
name = "xsensor"
version = "0.1.0"
authors = ["[pkjinfinity] <[pkjinfinity@outlook.com]>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "desktop"] }
dioxus-free-icons = { version = "0.10.0", features = [
    "font-awesome-brands",
    "font-awesome-solid",
] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.21.0" }
futures = "0.3.32"
rand = "0.10.0"
btleplug = { version = "0.11.8" }
once_cell = "1.19"
tokio = { version = "1.49.0", features = ["full", "sync"] }

[features]
default = []
